Changing links to css files and images

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="/src/css/global.css" />
-        <link rel="stylesheet" href="/src/css/home.css" />
+        <link rel="stylesheet" href="/flexflow/css/global.css" />
+        <link rel="stylesheet" href="/flexflow/css/home.css" />
     </head>
     <body>
         <header class="header">
@@ -134,35 +134,35 @@
                     <ul class="companies-list">
                         <li class="companies-item">
                             <img
-                                src="/src/icons/ai-insights-logo.svg"
+                                src="/flexflow/icons/ai-insights-logo.svg"
                                 alt="AI Insights"
                             />
                             <p>AI Insights</p>
                         </li>
                         <li class="companies-item">
                             <img
-                                src="/src/icons/agency-soar-logo.svg"
+                                src="/flexflow/icons/agency-soar-logo.svg"
                                 alt="Агенство Soar"
                             />
                             <p>Агенство Soar</p>
                         </li>
                         <li class="companies-item">
                             <img
-                                src="/src/icons/technoharmony-logo.svg"
+                                src="/flexflow/icons/technoharmony-logo.svg"
                                 alt="ТехноГармония"
                             />
                             <p>ТехноГармония</p>
                         </li>
                         <li class="companies-item">
                             <img
-                                src="/src/icons/synergy-inc-logo.svg"
+                                src="/flexflow/icons/synergy-inc-logo.svg"
                                 alt="Synergy Inc"
                             />
                             <p>Synergy Inc</p>
                         </li>
                         <li class="companies-item">
                             <img
-                                src="/src/icons/smart-home-logo.svg"
+                                src="/flexflow/icons/smart-home-logo.svg"
                                 alt="Умный дом"
                             />
                             <p>Умный дом</p>
@@ -295,7 +295,7 @@
                         </div>
                     </div>
                     <img
-                        src="/src/img/Survey image.png"
+                        src="/flexflow/img/Survey image.png"
                         alt="Опрос"
                         class="survey-image"
                     />
@@ -304,7 +304,7 @@
             <section class="price">
                 <div class="price-content container">
                     <img
-                        src="/src/img/Price image.png"
+                        src="/flexflow/img/Price image.png"
                         alt="Цены"
                         class="price-image"
                     />
@@ -341,7 +341,7 @@
                         <li class="portfolio-item">
                             <img
                                 class="portfolio-item_image"
-                                src="/src/img/portfolio-personal-account.png"
+                                src="/flexflow/img/portfolio-personal-account.png"
                                 alt="личный_кабинет"
                             />
                             <p class="portfolio-item__title">
@@ -357,7 +357,7 @@
                         <li class="portfolio-item">
                             <img
                                 class="portfolio-item_image"
-                                src="/src/img/implementation-of-aI.png"
+                                src="/flexflow/img/implementation-of-aI.png"
                                 alt="внедрение_ии"
                             />
                             <p class="portfolio-item__title">
@@ -372,7 +372,7 @@
                         <li class="portfolio-item">
                             <img
                                 class="portfolio-item_image"
-                                src="/src/img/design-code.png"
+                                src="/flexflow/img/design-code.png"
                                 alt="дизайн_код"
                             />
                             <p class="portfolio-item__title">
@@ -463,6 +463,6 @@
                 </div>
             </footer>
         </main>
-        <script src="/src/js/mobile-menu.js"></script>
+        <script src="/flexflow/js/mobile-menu.js"></script>
     </body>
 </html>
