--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
             href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="/flexflow/css/global.css" />
-        <link rel="stylesheet" href="/flexflow/css/home.css" />
+        <link rel="stylesheet" href="/css/global.css" />
+        <link rel="stylesheet" href="/css/home.css" />
     </head>
     <body>
         <header class="header">
