--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             rel="stylesheet"
         />
         <link rel="stylesheet" href="/flexflow/css/global.css" />
-        <link rel="stylesheet" href="/flexflow//css/home.css" />
+        <link rel="stylesheet" href="/flexflow/css/home.css" />
     </head>
     <body>
         <header class="header">
